PTXprint 1.5.15 Release Notes 
6 March 2021


Bug Fixes and Improvements in 1.5.16

  * Allow \zimagecopyrights and following language code to be case-insensitive
  
  * Several bug fixes to Diglot handling
  
  * Enable pictures in non-scripture "books" to print
  
Bug Fixes and Improvements in 1.5.15

  * Fixed a bunch of bugs that new users would encounter when starting to use PTXprint
  
  * Add Credit Overlay for (DCC!) illustrations
  
  * Diglot macros have been significantly improved to be more robust [but testing is ongoing...]
  
  * Handle syntax errors in referenced scripture from a module
  
  * Set footnotes to be smaller by default
  
  * Magic button to calculate & optimize column widths for diglot publications
  
  * Swap Pri/Sec sides of diglot works now and also makes appropriate changes to headers
  
  * Improve diglot merge chunking and reordering
  
  * Enable localized \zimagecopyrights (by adding language code) -> \zimagecopyrightsfr (for French)
  
  * Fixed issues with \toc3, thumbtabs and ToC

Bug Fixes and Improvements in 1.5.14.4

  * Fix module loading

  * Allow DBL import for in spec (old spec) DBL bundles

  * Fix Linux PPA building

Bug Fixes and Improvements in 1.5.14.1

  * Fix fatal (Faux) error when trying to switch UI languages
  
  * Fix #405 missing Param
  
  * Fix linux install application fonts path
  
  * Add Use Glyph Metrics legacy control
  
  * Fix missing remembered paratext directory
  
  * #394 xt regex and usfm exception reporting
  
  * Fix piclists for add and remove
  
  * #393 Always output any selected borders in ZIP Archive even if borders are turned off
  
  * Fix #406 regexes for excluding intro materials
  
Bug Fixes and Improvements in 1.5.13

  * Allow \zimagecopyrights to be localized by adding language code to end of marker
  
  * UI changes on Layout tab to make margin settings clearer
  
  * Magic button to optimize line spacing, or top and bottom margins
  