@@ -508,11 +508,3 @@
 
 \Marker toc3
 \Color xFFFFFE
-
-\Marker zglo
-\Name zglo - Special Text - Glossary Word Markup
-\Description Gloss component of a ruby string either for interlinear or ruby
-\OccursUnder rb
-\TextType VerseText
-\StyleType Character
-\OccursUnder ili ili1 ili2 ili3 ili4 ip im ipi imi ipq imq ipr iq iq1 iq2 iq3 io io1 io2 io3 io4 ms ms1 ms2 s s1 s2 s3 s4 cd sp d li li1 li2 li3 li4 m mi nb p pc ph phi pi pi1 pi2 pi3 pr pmo pm pmc pmr q q1 q2 q3 q4 qc qr qm qm1 qm2 qm3 tr th1 th2 th3 th4 thr1 thr2 thr3 thr4 tc1 tc2 tc3 tc4 tcr1 tcr2 tcr3 tcr4 f fe NEST
